samples/_failures_safe/1761087238_7c9e68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dbd4ab6f.c: In function ‘main’:
./samples/SAFE/__tmp_dbd4ab6f.c:180:13: error: expected declaration or statement at end of input
  180 |             if (can_undo(sm)) {
      |             ^~
./samples/SAFE/__tmp_dbd4ab6f.c:180:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dbd4ab6f.c:180:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dbd4ab6f.c:180:13: error: expected declaration or statement at end of input
